feat(demo): use ngx-logos to display logo (#23)

--- a/demo/src/assets/style/variables.scss
+++ b/demo/src/assets/style/variables.scss
@@ -18,5 +18,5 @@ $output-color       : $ngx-plus-blue !default;
 
 $nav-height         : 80px;
 $nav-brand-width    : 200px;
-$nav-logo-url       : './assets/img/ngx-plus-light.png';
+$nav-logo-url       : '~@ngx-plus/ngx-logos/svg/ngx-logo-lightblue.svg';
 $nav-logo-size      : 70px;
