feat(demo): update logos in project

--- a/demo/src/app/ui/footer/footer.component.html
+++ b/demo/src/app/ui/footer/footer.component.html
@@ -18,10 +18,7 @@
       </li>
     </ul>
   </section>
-  <img class="rounded mx-auto mb-5 d-block"
-       src="assets/img/ngx-plus-light.svg"
-       height="150px"
-       alt="ngx-plus">
+  <i class="mx-auto mb-5 d-block ngx-logo ngx-logo-sm ngx-logo-lightblue"></i>
 </div>
 
 <nav class="navbar footer container-fluid">
