--- a/demo/src/styles.scss
+++ b/demo/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import './assets/style/variables';
 @import '~@ngx-plus/ngx-forms/src/scss/styles';
+@import '~@ngx-plus/ngx-logos/css/logos';
 @import '~animate.css';
 @import '~prismjs/themes/prism';
 @import '~font-awesome/css/font-awesome.min.css';
