refactor(demo): link to local version of the library

--- a/apps/demo/src/styles.scss
+++ b/apps/demo/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import './assets/style/variables';
-@import '~@ngx-plus/ngx-forms/css/styles.css';
+@import '../../../libs/ngx-forms/src/css/styles.css';
 @import '~@ngx-plus/ngx-logos/css/logos';
 @import '~prismjs/themes/prism';
 @import '~font-awesome/css/font-awesome.min.css';
